@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.3 2004/09/22 08:09:34 jlam Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/10/30 00:47:37 xtraeme Exp $
 bin/cjpeg
 bin/djpeg
 bin/jpegtran
@@ -8,6 +8,7 @@ include/jconfig.h
 include/jerror.h
 include/jmorecfg.h
 include/jpeglib.h
+include/jpegint.h
 lib/libjpeg.la
 man/man1/cjpeg.1
 man/man1/djpeg.1
